SNMP interfaces GUI handling started